[gd_scene load_steps=8 format=3 uid="uid://da3hd5ht7ta6x"]

[ext_resource type="Script" uid="uid://rlplht6w6p0q" path="res://hero/item/test_item.gd" id="1_ui4m5"]
[ext_resource type="Texture2D" uid="uid://c4yus3jbbt4ue" path="res://hero/item/батарейка.png" id="2_avse5"]
[ext_resource type="Texture2D" uid="uid://f1xobwyiscmm" path="res://buttons/keyboard_15.png" id="2_ui4m5"]
[ext_resource type="Texture2D" uid="uid://l6qniwy35bk2" path="res://buttons/keyboard_116.png" id="3_avse5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ibspb"]
size = Vector2(80, 80)

[sub_resource type="CircleShape2D" id="CircleShape2D_lg5kl"]
radius = 149.164

[sub_resource type="SpriteFrames" id="SpriteFrames_gwpnw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ui4m5")
}, {
"duration": 1.0,
"texture": ExtResource("3_avse5")
}],
"loop": true,
"name": &"ClickButton",
"speed": 2.0
}]

[node name="Item" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_ui4m5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ibspb")

[node name="Item07" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(1, 7.62939e-06)
scale = Vector2(0.392593, 0.437037)
texture = ExtResource("2_avse5")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_lg5kl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
light_mask = 3
texture_filter = 1
position = Vector2(2, -139)
scale = Vector2(1.4375, 1.625)
sprite_frames = SubResource("SpriteFrames_gwpnw")
animation = &"ClickButton"
autoplay = "ClickButton"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
